# kama-ui-example

./: .gitignore  kamaconfig.yml  pyproject.toml
config/: colors.json
config/widgets/: root.json
kexample/: main.py
kexample/controller/: button.py
resources/: colors.yml  fonts.yml
resources/data/: fonts.json
resources/data/widgets/: root.json
resources/layouts/: notification.kml  root.kml
resources/locales/: en_PSEUDO.yml  en_US.yml
resources/styles/: color.kss  main.kss  main.qss  notification.kss
src/kexample/: main.py
src/kexample/controller/: button.py
tests/: test_main.py
tests/controller/: test_button.py
